# l2-map-engine

./: .gitignore  CMakeLists.txt  COMMERCIAL.md  LICENSE  README.md
analytics/: mapping_analysis.ipynb
cmake/: FetchDependencies.cmake
docs/: math_notes.md
include/l2map/: basis_builder.hpp  basis_builder_3d.hpp  bvh.hpp  element_library.hpp  element_library_3d.hpp  io.hpp  mapping_engine.hpp  mapping_engine_3d.hpp  mapping_engine_3d_exact.hpp  mesh.hpp  parallel_executor.hpp  poly_integrator.hpp  poly_integrator_3d.hpp  polygon_clipper.hpp  polyhedron_clipper.hpp  types.hpp
python/: CMakeLists.txt  bindings.cpp
src/: basis_builder.cpp  basis_builder_3d.cpp  bvh.cpp  element_library.cpp  element_library_3d.cpp  io.cpp  mapping_engine.cpp  mapping_engine_3d.cpp  mapping_engine_3d_exact.cpp  mesh.cpp  parallel_executor.cpp  poly_integrator.cpp  poly_integrator_3d.cpp  polygon_clipper.cpp  polyhedron_clipper.cpp
tests/: CMakeLists.txt  test_basis_builder.cpp  test_mapping_engine.cpp  test_mapping_engine_3d.cpp  test_mapping_engine_diagnostic.cpp  test_poly_integrator.cpp  test_poly_integrator_3d.cpp  test_polygon_clipper.cpp
tests/reference_data/: integration_test_elements_new.txt  integration_test_expected_output.txt  integration_test_field_data.txt  integration_test_mesh_new.txt  integration_test_mesh_old.txt  quad8_basis_polys.txt
tools/: generate_reference_data.py  polyinteg.py  test_pybind.py
